# NiaAutoARM

./: CITATION.cff  LICENSE  README.md  basic_run.py  preprocessing.py  pyproject.toml
.github/images/: NiaAutoARM.eps
.github/workflows/: build.yml  test.yml
autoarm/: __init__.py  preprocessing.py
datasets/: Autompg.csv  Balance_scale.csv  Basketball.csv  Bolts.csv  Buying.csv  Car.csv  German.csv  Quake.csv  README.md  Wine.csv  dataset1.csv
docs/: conf.py  index.rst  requirements.txt
docs/dev/: installation.rst
docs/niaautoarm/: index.rst
docs/niaautoarm/niaautoarm/: armoptimizer.rst  autoarmproblem.rst  logger.rst  pipeline.rst  preprocessing.rst  stats.rst  utils.rst
docs/user/: usage.rst
examples/: basic_run.py  preprocessing.py  xai.py
niaautoarm/: __init__.py  armoptimizer.py  armpipelineoptimizer.py  autoarm.py  autoarmproblem.py  niaautoarm.py  pipeline.py  preprocessing.py  preprocessing_class.py  stats.py  utils.py
niaautoarm/explain/: counterfactual.py
tests/: test_autoarm.py
tests/tests_files/: test_dataset.csv
xai/: XAIArmPipeline.py
