[tool.poetry]
name = "AutoARM"
version = "0.1.0"
description = ""
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>"]

[tool.poetry.dependencies]
python = "^3.9"
niapy = "^2.0.0"
niaaml = "^1.1.7"
pandas = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
