[tool.poetry]
name = "NiaAutoARM"
version = "0.1.0"
description = "Automated Association Rule Mining"
authors = ["Iztok Fister Jr. <iztok@iztok-jr-fister.eu>", "Žiga Stupan <ziga.stupan1@student.um.si>"]

[tool.poetry.dependencies]
python = "^3.9"
niapy = "^2.0.4"
niaaml = "^1.1.11"
pandas = "^1.4.0"
niaarm = "^0.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
